Fix uninitialized read during pinned tab layout.

When I changed the API to return the pinned tab X instead of storing it in the
next array element, I failed to update all the callers.

BUG=840150

Change-Id: Ib4ec2736bbdf1b768d318c2d2f7e214d3ae3929f
Reviewed-on: https://chromium-review.googlesource.com/1083778
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564170}
Former-commit-id: 4ff23e18e3a345031336435002a5cbefee1cf45a